update prompt answer and map for builder tool

--- a/app/templates/_parts/testimonial/testLaunchCarousel.html.twig
+++ b/app/templates/_parts/testimonial/testLaunchCarousel.html.twig
@@ -43,7 +43,7 @@
                             >
                             {% endif %}
                             <p>{{ item.description ?? item.review }}</p>
-                            <h5>{{ item.head ?? item.name }}</h5>
+                            <h5>{{ item.headline ?? item.head ?? item.name }}</h5>
                         </div>
                     </div>
                 </div>
