--- a/app/templates/control-panel/components/header/fixed-top.html.twig
+++ b/app/templates/control-panel/components/header/fixed-top.html.twig
@@ -24,10 +24,13 @@
                         <a class="nav-link {% if routeCurrent == 'cp_user_show' %}active{% endif %}" href="{{ absolute_url(path('cp_user_show', {'user': app.user.username})) }}">Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if routeCurrent == 'cp_project_list' %}active{% endif %}" href="{{ absolute_url(path('cp_project_list')) }}">Projects</a>
+                        <a class="nav-link {% if routeCurrent == 'cp_project_list' %}active{% endif %}" href="{{ absolute_url(path('cp_project_list')) }}">My Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if routeCurrent == 'cp_variant_list_user' %}active{% endif %}" href="{{ absolute_url(path('cp_variant_list_user')) }}">Variants</a>
+                        <a class="nav-link">Community Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Request help</a>
                     </li>
                 </ul>
 
