--- a/app/templates/_parts/base/base.html.twig
+++ b/app/templates/_parts/base/base.html.twig
@@ -33,13 +33,13 @@
 
 </head>
 
-<body class="">
+<body >
 
 {% include'_parts/base/icons.html.twig' %}
 
 <div id="home"></div>
 
-{% if data.parts.header is defined and data.parts.header.isActive %}
+{% if data.parts.header is defined and data.parts.header is not null and data.parts.header.isActive %}
 <div id="header" class="fixed-top">
     {% block header %}
         {% include '_parts/header/' ~ data.parts.header.template ~ '.html.twig' with {'data': data.parts.header.data} %}
@@ -52,33 +52,33 @@
 {% endif %}
 
 {% block content %}
-    <div id="page-landing">
+    <div id="page-landing" class="d-flex flex-column min-vh-100 justify-content-between">
 
-        {% if data.parts.hero is defined and data.parts.hero.isActive %}
+        {% if data.parts.hero is defined and data.parts.hero is not null and data.parts.hero.isActive %}
             {% include '_parts/hero/' ~ data.parts.hero.template ~ '.html.twig'  with {'data': data.parts.hero.data} %}
         {% endif %}
 
-        {% if data.parts.features is defined and data.parts.features.isActive %}
+        {% if data.parts.features is defined and data.parts.features is not null and data.parts.features.isActive %}
             {% include '_parts/features/' ~ data.parts.features.template ~ '.html.twig'  with {'data': data.parts.features.data} %}
         {% endif %}
 
-        {% if data.parts.howitworks is defined and data.parts.howitworks.isActive %}
+        {% if data.parts.howitworks is defined and data.parts.howitworks is not null and data.parts.howitworks.isActive %}
             {% include '_parts/how-it-works/' ~ data.parts.howitworks.template ~ '.html.twig'  with {'data': data.parts.howitworks.data} %}
         {% endif %}
 
-        {% if data.parts.testimonial is defined and data.parts.testimonial.isActive %}
+        {% if data.parts.testimonial is defined and data.parts.testimonial is not null and data.parts.testimonial.isActive %}
             {% include '_parts/testimonial/' ~ data.parts.testimonial.template ~ '.html.twig'  with {'data': data.parts.testimonial} %}
         {% endif %}
 
-        {% if data.parts.pricing is defined and data.parts.pricing.isActive %}
+        {% if data.parts.pricing is defined and data.parts.pricing is not null and data.parts.pricing.isActive %}
             {% include '_parts/pricing/' ~ data.parts.pricing.template ~ '.html.twig'  with {'data': data.parts.pricing.data} %}
         {% endif %}
 
-        {% if data.parts.newsletter is defined and data.parts.newsletter.isActive %}
+        {% if data.parts.newsletter is defined and data.parts.newsletter is not null and data.parts.newsletter.isActive %}
             {% include '_parts/newsletter/' ~ data.parts.newsletter.template ~ '.html.twig'  with {'data': data.parts.newsletter} %}
         {% endif %}
 
-        {% if data.parts.footer is defined and data.parts.footer.isActive %}
+        {% if data.parts.footer is defined and data.parts.footer is not null and data.parts.footer.isActive %}
             {% include '_parts/footer/' ~ data.parts.footer.template ~ '.html.twig'  with {'data': data.parts.footer} %}
         {% endif %}
 
