--- a/app/templates/control-panel/variant/list.html.twig
+++ b/app/templates/control-panel/variant/list.html.twig
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="min-vh-100 pt-5">
-        <div class="container pt-4">
+        <div class="container-fluid p-4">
 
             <div class="row justify-content-start mb-3">
                 <div class="d-flex justify-content-start align-items-center flex-row">
@@ -14,6 +14,7 @@
                         title="Add variant"
                     >
                         <svg class="bi bi-1"><use xlink:href="#plus-square-fill"/></svg>
+                        Create
                     </a>
 
                     <a
@@ -23,11 +24,12 @@
                         title="AI variant generation"
                     >
                         <svg class="bi bi-1"><use xlink:href="#cpu-fill"/></svg>
+                        AI creator
                     </a>
                 </div>
             </div>
 
-            <div class="row gx-5 justify-content-center">
+            <div class="row justify-content-center">
 
                 <table class="table table-striped table-bordered table-hover">
                     <tr>
@@ -37,6 +39,8 @@
                         <th>description</th>
                         <th>start at</th>
                         <th>end at</th>
+                        <th>views</th>
+                        <th>cta</th>
                         <th>actions</th>
                     </tr>
 
@@ -65,6 +69,10 @@
                                         {{ variant.endAt|date('d/m/Y H:i') }}
                                     {% endif %}
                                 </td>
+
+
+                                <td>views</td>
+                                <td>cta</td>
 
                                 <td>
                                     <a
