--- a/app/templates/control-panel/variant/builder/index.html.twig
+++ b/app/templates/control-panel/variant/builder/index.html.twig
@@ -8,22 +8,35 @@
             margin: 0;
             padding: 0;
         }
-    </style>
-    <div class="container-fluid vh-100">
-        <div class="row">
 
+        .gutter {
+            width: 10px;
+            height: 100%;
+            /*background: #666;*/
+            position: absolute;
+            top: 0;
+            right: 0;
+            cursor: col-resize;
+            box-shadow: 0px 8px 8px 3px rgba(96, 94, 94, 0.34), inset 0 0 5px rgba(0, 0, 255, 0.34);
+        }
+    </style>
+
+    <div class="container-fluid vh-100">
+        <div class="row d-flex flex-row flex-nowrap">
             <div
+                id="cp-panel-left"
+
                 class="
+                    bg-light
                     scroll-primary
                     col-md-4
                     col-lg-3
-                    bg-gradient-primary
                     h-100
                     p-1
-                    border-r-1
-                    border-primary
                     overflow-y-auto
                     vh-100
+                    position-relative
+                    pe-2
                 "
             >
 
@@ -57,10 +70,20 @@
                     </div>
 
                 {{ form_end(builderForm) }}
+
+                <div id="cp-gutter" class="gutter bg-secondary"></div>
             </div>
 
-            <div class="col-md-8 col-lg-9 p-0 overflow-hidden">
+            <div
+                id="cp-panel-right"
 
+                class="
+                    col-md-8
+                    col-lg-9
+                    p-0
+                    overflow-hidden
+                "
+            >
                 <iframe
                     class="
                         scroll-primary
@@ -77,4 +100,39 @@
 
         </div>
     </div>
+{% endblock %}
+
+{% block scriptsbottom %}
+<script type="application/javascript">
+    const leftPane = document.getElementById("cp-panel-left");
+    const rightPane = document.getElementById("cp-panel-right");
+    const gutter = document.getElementById("cp-gutter");
+
+    function resizer(e) {
+        window.addEventListener('mousemove', mousemove);
+        window.addEventListener('mouseup', mouseup);
+
+        let prevX = e.x;
+        const leftPanel = leftPane.getBoundingClientRect();
+        const rightPanel = rightPane.getBoundingClientRect();
+
+        function mousemove(e) {
+            let newX = e.x - prevX;
+
+            if (leftPanel.width + newX < 200) {
+                return;
+            }
+            leftPane.style.width = leftPanel.width + newX + "px";
+            rightPane.style.width = rightPanel.width - newX + "px";
+
+        }
+
+        function mouseup() {
+            window.removeEventListener('mousemove', mousemove);
+            window.removeEventListener('mouseup', mouseup);
+        }
+    }
+
+    gutter.addEventListener('mousedown', resizer);
+</script>
 {% endblock %}
