update variant builder design. add vertical sidebar buttons and resizable sidebar

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -133,7 +133,7 @@ body {
     --palette-skip-shade-400: #74fac8;
 
     --palette-color-white: #f8f9fa;
-    --palette-color-black: #060606;
+    --palette-color-black: #0d1216;
 
     --paletter-color-primary: var(--palette-generic-100);
 }
