--- a/app/public/assets/css/style-cp.css
+++ b/app/public/assets/css/style-cp.css
@@ -31,8 +31,15 @@ div::-webkit-scrollbar-thumb {
     color: var(--palette-color-white) !important;
 }
 
-/*.tab-content label,*/
-/*.tab-content legend*/
-/*{*/
-/*    color: var(--palette-color-white) !important;*/
-/*}*/
+.btn-loading::after {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    vertical-align: -.125em;
+    background-color: currentColor;
+    border-radius: 50%;
+    opacity: 0;
+    animation: .75s linear infinite spinner-grow;
+    margin-left: 0.55rem;
+}
